k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: roulette-frontend
  ports:
    - port: 3000
      targetPort: 3000
